[package]
name = "rphtml"
version = "0.3.1"
authors = ["jxz_211 <jxz_211@163.com>"]
edition = "2018"
license = "MIT"
description = "a html parser write in rust."
keywords = ["html", "parser", "html-parser", "html-minify", "html-render"]
repository = "https://github.com/fefit/rphtml"
categories = ["parser-implementations", "wasm"]
exclude = ["node/**/*.*", "cases/**/*.html", "src/wasm_config.rs", "src/wasm.rs"]
readme = "README.md"

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0.21"
serde = { version = "1.0.116", features = ["derive", "rc"] }
serde_json = "1.0.57"
serde_repr = "0.1.6"
uuid = { version = "0.8.1", features = ["wasm-bindgen","v4"]}
htmlentity = {version = "1.1.0", git = "https://github.com/fefit/htmlentity", tag = "v1.1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version="0.2.68", features = ["serde-serialize"] }
js-sys = "0.3.46"
console_error_panic_hook = "0.1.6"

[lib]
name = "rphtml"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.3"
wasm-bindgen-test = "0.3.18"

[[bench]]
name = "benchmark"
harness = false

[[bin]]
name="rphtml"
path="src/main.rs"