[package]
name = "rphtml"
version = "0.5.0"
authors = ["jxz_211 <jxz_211@163.com>"]
edition = "2018"
license = "MIT"
description = "A html parser written in rust."
keywords = ["html", "parser", "html-parser", "html-minify", "html-render"]
repository = "https://github.com/fefit/rphtml"
categories = ["parser-implementations", "wasm"]
exclude = ["node/**/*.*", "cases/**/*.*", "build.sh", "codecov.yml", ".travis.yml"]
readme = "README.md"

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0.21"
htmlentity = "1.1.1"

[lib]
name = "rphtml"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.3"
wasm-bindgen-test = "0.3.18"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true